# clamav-rest

./: Cargo.toml
.github/workflows/: dockerimage.yml
docker/: Dockerfile  Dockerfile.debug
src/: main.rs
