[package]
name = "clamav-rest"
version = "0.1.0"
authors = ["Ben Schmidt <supernothing@spareclockcycles.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clamav = "0.4.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
awmp = { version = "0.5.1", default-features = false, features = ["v2"] }
